docker compose working

--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_ENV=dev
 COOKIE_SECRET=qpmqlwt6jwa
 SUPERADMIN_USERNAME=superadmin
 SUPERADMIN_PASSWORD=superadmin
-DB_HOST=localhost
+DB_HOST=host.docker.internal
 DB_PORT=5432
 DB_NAME=vendure
 DB_USERNAME=postgres
