--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "tsc",
     "start:server": "node ./dist/index.js",
     "start:worker": "node ./dist/index-worker.js",
-    "start": "concurrently npm:start:*"
+    "start": "concurrently npm:start:*",
+    "populate": "ts-node ./src/populate-db.ts"
   },
   "dependencies": {
     "@vendure/admin-ui-plugin": "3.4.0",
@@ -22,6 +23,7 @@
   },
   "devDependencies": {
     "@vendure/cli": "3.4.0",
+    "@vendure/create": "3.4.0",
     "concurrently": "9.2.0",
     "typescript": "5.8.2"
   }
