--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "pg": "8.16.3"
   },
   "devDependencies": {
-    "@vendure/cli": "3.4.0",
+    "@vendure/cli": "minor",
     "@vendure/create": "3.4.0",
     "concurrently": "9.2.0",
     "typescript": "5.8.2"
